Apply new function to gen stations