@@ -4,19 +4,20 @@ import com.hxzhitang.tongdarailway.Tongdarailway;
 import com.hxzhitang.tongdarailway.railway.RegionPos;
 import com.hxzhitang.tongdarailway.structure.ModStructureManager;
 import com.hxzhitang.tongdarailway.structure.StationTemplate;
-import com.hxzhitang.tongdarailway.util.MyRandom;
+import com.mojang.datafixers.util.Pair;
 import net.minecraft.core.BlockPos;
+import net.minecraft.core.registries.Registries;
 import net.minecraft.nbt.CompoundTag;
 import net.minecraft.server.level.ServerLevel;
-import net.minecraft.world.level.ChunkPos;
 import net.minecraft.world.level.chunk.ChunkGenerator;
 import net.minecraft.world.level.levelgen.Heightmap;
+import net.minecraft.world.level.levelgen.NoiseBasedChunkGenerator;
 import net.minecraft.world.level.levelgen.RandomState;
 import net.minecraft.world.phys.Vec3;
+import net.neoforged.neoforge.common.Tags;
 
 import java.util.*;
 
-import static com.hxzhitang.tongdarailway.Tongdarailway.CHUNK_GROUP_SIZE;
 import static com.hxzhitang.tongdarailway.Tongdarailway.HEIGHT_MAX_INCREMENT;
 
 // 站点规划 连接规划
@@ -28,47 +29,67 @@ public class StationPlanner {
     }
 
     // 区域内站点生成
-    public static List<StationGenInfo> generateStation(RegionPos regionPos, ServerLevel level, long seed) {
+    public static List<Pair<StationGenInfo, List<BlockPos>>> generateStation(RegionPos regionPos, ServerLevel level, long seed) {
         ChunkGenerator gen = level.getChunkSource().getGenerator();
         RandomState cfg = level.getChunkSource().randomState();
+        var randomState = RandomState.create(
+                ((NoiseBasedChunkGenerator) gen).generatorSettings().value(),
+                level.registryAccess().lookupOrThrow(Registries.NOISE),
+                level.getSeed()
+        );
 
         long regionSeed = seed + regionPos.hashCode();
-        List<StationGenInfo> result = new ArrayList<>();
-        int[] pos = MyRandom.generatePoints(regionSeed, CHUNK_GROUP_SIZE);
-        ChunkPos chunkPos = regionPos.getChunkPos(pos[0], pos[1]);
+        List<Pair<StationGenInfo, List<BlockPos>>> result = new ArrayList<>();
 
-        int x = chunkPos.getBlockX(0);
-        int z = chunkPos.getBlockZ(0);
-        int y = gen.getBaseHeight(x, z, Heightmap.Types.WORLD_SURFACE, level, cfg);
+        var nodes = RouteGraph.generate(
+                regionPos.getBasePos().x,
+                regionPos.getBasePos().x + regionPos.getLength(),
+                regionPos.getBasePos().y,
+                regionPos.getBasePos().y + regionPos.getLength(),
+                6,
+                regionSeed,
+                70,
+                4,
+                (x, z) -> {
+                    var biome = gen.getBiomeSource().getNoiseBiome((int) x, 65, (int) z, randomState.sampler());
+                    return !biome.is(Tags.Biomes.IS_OCEAN);
+                }
+        );
 
-        int h = y;
-
-        // 使得站点的高度在一定区域内最小
-        int miny = 2550;
-        for (int ix = -2; ix < 3; ix++) {
-            for (int iz = -2; iz < 3; iz++) {
-                int ox = ix * 32 + x;
-                int oz = iz * 32 + z;
-                int ty = gen.getBaseHeight(ox, oz, Heightmap.Types.WORLD_SURFACE, level, cfg);
-                miny = Math.min(miny, ty);
+        for (RouteGraph.NodeData node : nodes) {
+            int x = (int) node.point.x;
+            int z = (int) node.point.z;
+            int y = gen.getBaseHeight(x, z, Heightmap.Types.WORLD_SURFACE, level, cfg);
+            // 使得站点的高度在一定区域内最小
+            int miny = 2550;
+            int h = miny;
+            for (int ix = -2; ix < 3; ix++) {
+                for (int iz = -2; iz < 3; iz++) {
+                    int ox = ix * 32 + x;
+                    int oz = iz * 32 + z;
+                    int ty = gen.getBaseHeight(ox, oz, Heightmap.Types.WORLD_SURFACE, level, cfg);
+                    miny = Math.min(miny, ty);
+                }
             }
-        }
+            // 确保站点高度在 seaLevel ~ seaLevel + 增量
+            h = Math.max(h, level.getSeaLevel());
+            h = Math.min(h, level.getSeaLevel() + HEIGHT_MAX_INCREMENT);
+            node.setPointY(h);
 
-        if (y - miny > 20)
-            h = miny;
+            // 根据高度决定生成地上还是地下车站
+            int exitNum = node.connected.size() >= 4 ? 4 : 2;
+            StationTemplate station;
+            if (h < y - 10) {
+                station = ModStructureManager.getRandomUnderGroundStation(regionSeed, exitNum);
+            } else {
+                station = ModStructureManager.getRandomNormalStation(regionSeed, exitNum);
+            }
 
-        // 确保站点高度在 seaLevel ~ seaLevel + 增量
-        h = Math.max(h, level.getSeaLevel());
-        h = Math.min(h, level.getSeaLevel() + HEIGHT_MAX_INCREMENT);
-        // 根据高度决定生成地上还是地下车站
-        StationTemplate station;
-        int placeH = h;
-        if (h < y - 10) {
-            station = ModStructureManager.getRandomUnderGroundStation(regionSeed);
-        } else {
-            station = ModStructureManager.getRandomNormalStation(regionSeed);
+            result.add(new Pair<>(
+                    new StationGenInfo(station, new BlockPos(x, h, z)),
+                    node.connected.stream().map(p -> new BlockPos((int) p.x, 0, (int) p.z)).toList()
+            ));
         }
-        result.add(new StationGenInfo(station, new BlockPos(x, placeH, z)));
 
         return result;
     }
@@ -76,101 +97,180 @@ public class StationPlanner {
     // 路线连接规则生成
     public List<ConnectionGenInfo> generateConnections(ServerLevel level, long seed) {
         List<ConnectionGenInfo> result = new ArrayList<>();
+        Map<Integer, List<StationTemplate.Exit>> connect = new HashMap<>();
 
-        List<StationGenInfo> thisStations = generateStation(regionPos, level, seed);
+        List<Pair<StationGenInfo, List<BlockPos>>> thisStations = generateStation(regionPos, level, seed);
 
-        List<StationGenInfo> north = generateStation(new RegionPos(regionPos.x(), regionPos.z()-1), level, seed);
-        List<StationGenInfo> south = generateStation(new RegionPos(regionPos.x(), regionPos.z()+1), level, seed);
+        for (Pair<StationGenInfo, List<BlockPos>> stationGen : thisStations) {
+            var station = stationGen.getFirst();
+            var connected = stationGen.getSecond();
 
-        List<StationGenInfo> east = generateStation(new RegionPos(regionPos.x()+1, regionPos.z()), level, seed);
-        List<StationGenInfo> west = generateStation(new RegionPos(regionPos.x()-1, regionPos.z()), level, seed);
+            var matching = minDistanceMatching(station.getExits(), connected);
+            for (Pair<StationTemplate.Exit, BlockPos> exitBlockPosPair : matching) {
+                var exit = exitBlockPosPair.getFirst();
+                var con = exitBlockPosPair.getSecond();
+                int key = station.placePos.getX()+station.placePos.getZ()+con.getX()+con.getZ();
+                connect.computeIfAbsent(key, k -> {
+                    List<StationTemplate.Exit> list = new ArrayList<>();
+                    list.add(exit);
+                    return list;
+                });
+            }
 
-        var thisAssignedExits = assignExits(getExitsPos(thisStations));
+            var tpos = station.placePos;
+            Tongdarailway.LOGGER.info("====> StationPlanner: {} {} {} {}", tpos.getX(), tpos.getY(), tpos.getZ(), regionPos);
+        }
 
-        var northAssignedExits = assignExits(getExitsPos(north));
-        var southAssignedExits = assignExits(getExitsPos(south));
-        var eastAssignedExits = assignExits(getExitsPos(east));
-        var westAssignedExits = assignExits(getExitsPos(west));
-
-        var tpos = thisStations.get(0).placePos;
-        Tongdarailway.LOGGER.info("====> StationPlanner: {} {} {} {}", tpos.getX(), tpos.getY(), tpos.getZ(), regionPos);
-
-
-        result.add(ConnectionGenInfo.getConnectionInfo(thisAssignedExits.get(3), eastAssignedExits.get(2), new Vec3(1, 0, 0)));
-        result.add(ConnectionGenInfo.getConnectionInfo(westAssignedExits.get(3), thisAssignedExits.get(2), new Vec3(1, 0, 0)));
-        result.add(ConnectionGenInfo.getConnectionInfo(northAssignedExits.get(1), thisAssignedExits.get(0), new Vec3(0, 0, 1)));
-        result.add(ConnectionGenInfo.getConnectionInfo(thisAssignedExits.get(1), southAssignedExits.get(0), new Vec3(0, 0, 1)));
+        connect.forEach((id, con) -> {
+            if (con.size() == 2) {
+                var exitA = con.getFirst();
+                var exitB = con.getLast();
+                result.add(new ConnectionGenInfo(
+                        exitA.exitPos().getCenter(),
+                        exitA.dir(),
+                        exitB.exitPos().getCenter(),
+                        exitB.dir(),
+                        exitA.pushAway(exitB.exitPos().getCenter()),
+                        exitB.pushAway(exitA.exitPos().getCenter())
+                ));
+            }
+        });
 
         return result;
     }
 
-    // 提取所有出口
-    private List<StationTemplate.Exit> getExitsPos(List<StationGenInfo> stations) {
-        List<StationTemplate.Exit> exits = new ArrayList<>();
-        for (StationGenInfo station : stations) {
-            BlockPos placePos = station.placePos;
-            for (StationTemplate.Exit exit : station.stationTemplate.getExits()) {
-                BlockPos offset = exit.exitPos();
-                exits.add(new StationTemplate.Exit(placePos.offset(offset), exit.dir()));
+    public static List<Pair<StationTemplate.Exit, BlockPos>> minDistanceMatching(
+            List<StationTemplate.Exit> a,
+            List<BlockPos> b
+    ) {
+        if (a == null || b == null || a.isEmpty() || b.isEmpty()) {
+            return new ArrayList<>();
+        }
+
+        boolean swapped = false;
+        List<StationTemplate.Exit> exits = a;
+        List<BlockPos> blocks = b;
+
+        int n = exits.size();
+        int m = blocks.size();
+
+        if (n > m) {
+            swapped = true;
+        }
+
+        int rows = Math.min(n, m);
+        int cols = Math.max(n, m);
+
+        double[][] cost = new double[rows][cols];
+
+        if (!swapped) {
+            for (int i = 0; i < rows; i++) {
+                BlockPos p1 = exits.get(i).exitPos();
+                for (int j = 0; j < cols; j++) {
+                    cost[i][j] = p1.distSqr(blocks.get(j));
+                }
+            }
+        } else {
+            for (int i = 0; i < rows; i++) {
+                BlockPos p1 = blocks.get(i);
+                for (int j = 0; j < cols; j++) {
+                    cost[i][j] = p1.distSqr(exits.get(j).exitPos());
+                }
             }
         }
 
-        return exits;
-    }
+        int[] match = hungarian(cost);
 
-    /**
-     * 分配东南西北向出口
-     * @param exits 出口集合
-     * @return 出口集合 顺序: [北, 南, 西, 东, 其他]
-     */
-    private List<StationTemplate.Exit> assignExits(List<StationTemplate.Exit> exits) {
-        if (exits.size() < 4) {
-            return exits;
-        }
+        List<Pair<StationTemplate.Exit, BlockPos>> result = new ArrayList<>();
 
-        List<StationTemplate.Exit> copy = new ArrayList<>(exits);
-
-        List<StationTemplate.Exit> result = new ArrayList<>();
-        // 对出口的按z坐标进行排序 加偏防止z存在相同
-        copy.sort(Comparator.comparingDouble(e -> {
-            int z = e.exitPos().getZ();
-            Random random = new Random(75_1049 + z);
-            double off = random.nextDouble() * 2 - 1;
-            return z + off;
-        }));
-
-        result.add(copy.removeFirst()); //z最小 北
-        result.add(copy.removeLast());  //z最大 南
-
-        // 对出口的按x坐标进行排序 加偏防止x存在相同
-        copy.sort(Comparator.comparingDouble(e -> {
-            int x = e.exitPos().getX();
-            Random random = new Random(75_1052 + x);
-            double off = random.nextDouble() * 2 - 1;
-            return x + off;
-        }));
-
-        result.add(copy.removeFirst());  //x最小 西
-        result.add(copy.removeLast());  //x最大 东
-
-        // 剩余的Exit放到result最后
-        Set<StationTemplate.Exit> addedExits = new HashSet<>(result);
-        for (StationTemplate.Exit exit : exits) {
-            if (!addedExits.contains(exit)) {
-                result.add(exit);
+        if (!swapped) {
+            for (int i = 0; i < rows; i++) {
+                int j = match[i];
+                if (j >= 0) {
+                    result.add(new Pair<>(exits.get(i), blocks.get(j)));
+                }
+            }
+        } else {
+            for (int i = 0; i < rows; i++) {
+                int j = match[i];
+                if (j >= 0) {
+                    result.add(new Pair<>(exits.get(j), blocks.get(i)));
+                }
             }
         }
 
-        return result; // 北 南 西 东
+        return result;
     }
 
-    private static int[] getConnectStart(BlockPos exitPos, Vec3 dir, Vec3 offset, Vec3 exitDir) {
-        Vec3 pos = Vec3.atCenterOf(exitPos);
-//        Vec3 addOff = offset.normalize().scale(30);
-        Vec3 addOff = exitDir.scale(68);
-        Vec3 start = pos.add(dir.scale(30).add(addOff));
-        // 最后的y尽量确保出站线和出站口在同高度
-        return new int[] {(int) start.x, (int) start.z, exitPos.getY()};
+    private static int[] hungarian(double[][] cost) {
+        int n = cost.length;
+        int m = cost[0].length;
+
+        double[] u = new double[n + 1];
+        double[] v = new double[m + 1];
+        int[] p = new int[m + 1];
+        int[] way = new int[m + 1];
+
+        for (int i = 1; i <= n; i++) {
+            p[0] = i;
+            int j0 = 0;
+
+            double[] minv = new double[m + 1];
+            boolean[] used = new boolean[m + 1];
+            Arrays.fill(minv, Double.POSITIVE_INFINITY);
+
+            do {
+                used[j0] = true;
+                int i0 = p[j0];
+
+                double delta = Double.POSITIVE_INFINITY;
+                int j1 = 0;
+
+                for (int j = 1; j <= m; j++) {
+                    if (!used[j]) {
+                        double cur = cost[i0 - 1][j - 1] - u[i0] - v[j];
+
+                        if (cur < minv[j]) {
+                            minv[j] = cur;
+                            way[j] = j0;
+                        }
+
+                        if (minv[j] < delta) {
+                            delta = minv[j];
+                            j1 = j;
+                        }
+                    }
+                }
+
+                for (int j = 0; j <= m; j++) {
+                    if (used[j]) {
+                        u[p[j]] += delta;
+                        v[j] -= delta;
+                    } else {
+                        minv[j] -= delta;
+                    }
+                }
+
+                j0 = j1;
+            } while (p[j0] != 0);
+
+            do {
+                int j1 = way[j0];
+                p[j0] = p[j1];
+                j0 = j1;
+            } while (j0 != 0);
+        }
+
+        int[] match = new int[n];
+        Arrays.fill(match, -1);
+
+        for (int j = 1; j <= m; j++) {
+            if (p[j] != 0) {
+                match[p[j] - 1] = j - 1;
+            }
+        }
+
+        return match;
     }
 
     // 站点放置信息(世界坐标系)
@@ -178,6 +278,10 @@ public class StationPlanner {
             StationTemplate stationTemplate,
             BlockPos placePos
     ) {
+        public List<StationTemplate.Exit> getExits() {
+            return stationTemplate.getExitsPos(placePos);
+        }
+
         public CompoundTag toNBT() {
             CompoundTag tag = new CompoundTag();
             tag.putInt("id", stationTemplate.getId());
@@ -194,19 +298,9 @@ public class StationPlanner {
             int y = tag.getInt("y");
             int z = tag.getInt("z");
             StationTemplate.StationType type = StationTemplate.StationType.valueOf(tag.getString("type"));
-            StationTemplate stationTemplate = null;
-            switch (type) {
-                case NORMAL -> {
-                    if (ModStructureManager.normalStation.containsKey(id)) {
-                        stationTemplate = ModStructureManager.normalStation.get(id);
-                    }
-                }
-                case UNDER_GROUND -> {
-                    if (ModStructureManager.undergroundStation.containsKey(id)) {
-                        stationTemplate = ModStructureManager.undergroundStation.get(id);
-                    }
-                }
-            }
+            StationTemplate stationTemplate = ModStructureManager.station2.getById(id);
+            if (stationTemplate == null)
+                stationTemplate = ModStructureManager.station4.getById(id);
 
             return new StationGenInfo(stationTemplate, new BlockPos(x, y, z));
         }
@@ -226,21 +320,8 @@ public class StationPlanner {
             Vec3 end,
             Vec3 endDir,
             int[] connectStart,
-            int[] connectEnd,
-            Vec3 exitDir
+            int[] connectEnd
     ) {
-        public static ConnectionGenInfo getConnectionInfo(StationTemplate.Exit A, StationTemplate.Exit B, Vec3 exitDir) {
-                Vec3 APos = new Vec3(A.exitPos().getX(), A.exitPos().getY(), A.exitPos().getZ());
-                Vec3 BPos = new Vec3(B.exitPos().getX(), B.exitPos().getY(), B.exitPos().getZ());
-                return new ConnectionGenInfo(
-                        APos,
-                        A.dir(),
-                        BPos,
-                        B.dir(),
-                        getConnectStart(A.exitPos(), A.dir(), BPos.subtract(APos), exitDir),
-                        getConnectStart(B.exitPos(), B.dir(), APos.subtract(BPos), exitDir.reverse()),
-                        exitDir
-                );
-            }
-        }
+
+    }
 }
